--- a/views/urls_reg.ejs
+++ b/views/urls_reg.ejs
@@ -16,6 +16,16 @@
 
   <% include ./partials/_header %>
 
+  <div>
+    <form method="POST" , action="/register">
+      <p>Email</p>
+      <input type="email" name="email">
+      <p>Password</p>
+      <input type="password" name="password">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
