header with email of person  logged in, and added helper function to check if email and password are filled out, and email does not already exist

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
 <header>
+  <%= user_id %>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -13,9 +14,9 @@
 
     </div>
     <div class="d-flex align-items center">
-      <% if (username) { %>
+      <% if (user_id) { %>
       <form method="POST" action="/logout">
-        <span style="font-size: 15px;">You are logged in as <em><%= username %></em></span>
+        <span style="font-size: 15px;">You are logged in as <em><%= user_id %></em></span>
         <button class="btn btn-primary" style="margin-left: 5px">Logout</button>
       </form>
       <% } else { %>
