--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,9 +15,9 @@
 <body>
 
   <% include ./partials/_header %>
-  <h2>Register</h2>
+  <h2>Login</h2>
   <div>
-    <form method="POST" action="/register">
+    <form method="POST" , action="/login">
       <p>Email</p>
       <input type="email" name="email">
       <p>Password</p>
