--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,10 +25,10 @@
         </tr>
       </thead>
       <tbody>
-        <% for(let url in urlDatabase) { %>
+        <% for(let url in data) { %>
         <tr>
           <td><%= url %></td>
-          <td><%= urlDatabase[url] %></td>
+          <td><%= data[url].longURL %></td>
           <td>
             <form method="POST" action="/urls/<%= url %>">
               <button type="submit" class="btn btn-primary">Edit</button>
