added screenshots and readme file, updated package.json to have all necessary dependancies

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,18 +12,19 @@
       </div>
 
     </div>
-    <div class="d-flex align-items center">
+    <div class="d-flex justify-content-end align-items-center">
       <% if (user_id) { %>
-      <form method="POST" action="/logout">
-        <span style="font-size: 15px;">You are logged in as <em><%= user_id.email %></em></span>
-        <button class="btn btn-primary" style="margin-left: 5px">Logout</button>
-      </form>
+      <div class="d-flex flex-row align-items-center">
+        <p style="font-size: 15px; margin-bottom: 0px">Logged in as: <b><%= user_id.email %></b></p>
+        <form method="POST" action="/logout">
+          <button type="submit" class="btn btn-primary" style="margin-left: 10px">Logout</button>
+        </form>
+      </div>
       <% } else { %>
-      <button class="btn btn-primary" style="margin-left: 5px"><a style="color: white" href="/login">Login</a></button>
+      <button class="btn btn-primary" style="width: 61.72px"><a style="color: white" href="/login">Login</a></button>
       <button class="btn btn-primary" style="margin-left: 5px"><a style="color: white"
           href="/register">Register</a></button>
       <% } %>
     </div>
-
   </nav>
 </header>
