--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,15 +16,17 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Edit</h5>
+      </div class="card-body d-flex justify-content-center">
+
+      <div class="card-footer text-muted">
+        <h5 style="color: black">Edit</h5>
         <form method="POST" action="/urls/<%= shortURL %>/edit">
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px;">
+          <div class="d-flex justify-content-center form-group">
+            <input class="form-control" type="text" name="longURL" value="http://" style="width: 300px;">
+          </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-      <div class="card-footer text-muted"></div>
     </div>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
