--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -38,7 +38,7 @@
           </td>
           <td>
             <div class="d-flex justify-content-center">
-              <form method="POST" action="/urls/<%= url %>/delete">
+              <form method="POST" action="/urls/<%= url %>/?_method=DELETE">
                 <button type="submit" class="btn btn-primary"
                   style="background-color: rgb(248, 86, 68); border-color: rgb(248, 86, 68)">Delete</button>
               </form>
