added bug fix for accessign short url withoout signing in

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -27,11 +27,16 @@
         </form>
       </div>
       <div class="card-body">
-        <label>Number of Visits</label>
-        <div class="card-text"><%= visitCount %></div>
+        <label><b>Number of Visits</b></label>
+        <div class="card-text"><%= visits %></div>
+      </div>
+      <div class="card-body">
+        <label><b>Number of Unique Visits</b></label>
+        <div class="card-text"><%= unique %></div>
       </div>
     </div>
-  </main <%= visitCount %> <!-- Bootstrap JS -->
+  </main>
+  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
