--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -27,12 +27,31 @@
         </form>
       </div>
       <div class="card-body">
-        <label><b>Number of Visits</b></label>
-        <div class="card-text"><%= visits %></div>
-      </div>
-      <div class="card-body">
-        <label><b>Number of Unique Visits</b></label>
-        <div class="card-text"><%= unique %></div>
+        <div style="margin-bottom: 10px">
+          <label><b>Number of Visits</b></label>
+          <div><%= visits %></div>
+        </div>
+        <div style="margin-bottom: 10px">
+          <label><b>Number of Unique Visits</b></label>
+          <div><%= unique %></div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h5 class="panel-title">Visitors</h5>
+            </div>
+            <div class="panel-body">
+              <ul class="list-group"
+                style="max-height: 110px; margin-bottom: 10px; overflow:scroll; -webkit-overflow-scrolling: touch; width: 300px;">
+                <li class="list-group-item">A</li>
+                <li class="list-group-item">B</li>
+                <li class="list-group-item">C</li>
+                <li class="list-group-item">D</li>
+                <li class="list-group-item">E</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
